--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "dependencies": {
     "telegraf": "^4.12.2",
     "axios": "^1.4.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "twilio": "^4.22.0",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
