Revise .env.example with placeholders and options
Updated example environment variables with placeholders and added optional fields.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# Copy to .env and fill values
-TELEGRAM_TOKEN=your_telegram_token_here
-ADMIN_TELEGRAM_ID=123456789
-TWILIO_SID=ACxxxxxxxxxxxxxxxxxxxxx
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_VERIFY_SID=VAxxxxxxxxxxxxxxxxxxxxx
-PORT=8080
+TELEGRAM_TOKEN=...
+TWILIO_ACCOUNT_SID=...
+TWILIO_AUTH_TOKEN=...
+TWILIO_VERIFY_SID=...
+ADMIN_TELEGRAM_ID=7003416998    # or your Telegram ID
+RATE_PER_KG=120                 # optional
+VERIFICATION_DAYS=30            # optional
