--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
-TELEGRAM_TOKEN=...
-TWILIO_ACCOUNT_SID=...
-TWILIO_AUTH_TOKEN=...
-TWILIO_VERIFY_SID=...
-ADMIN_TELEGRAM_ID=7003416998    # or your Telegram ID
-RATE_PER_KG=120                 # optional
-VERIFICATION_DAYS=30            # optional
+# Telegram
+TELEGRAM_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
+
+# Twilio
+TWILIO_ACCOUNT_SID=YOUR_TWILIO_ACCOUNT_SID
+TWILIO_AUTH_TOKEN=YOUR_TWILIO_AUTH_TOKEN
+TWILIO_VERIFY_SID=YOUR_TWILIO_VERIFY_SERVICE_SID
+
+# Admin
+ADMIN_TELEGRAM_ID=7003416998
+
+# App settings
+RATE_PER_KG=120
+VERIFICATION_DAYS=30
+PORT=3000
