--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "clean-naija",
+  "name": "clean-naija-bot",
   "version": "1.0.0",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "web": "node server.js"
+    "start": "node server.js",
+    "bot": "node bot.js"
   },
   "dependencies": {
     "telegraf": "^4.12.2",
-    "twilio": "^4.14.0",
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "axios": "^1.4.0"
+    "express": "^4.18.2"
   }
 }
