--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "clean-naija-bot",
   "version": "1.0.0",
-  "description": "Telegram bot for waste management and verification (Clean Naija Bot)",
-  "main": "bot.js",
+  "description": "Clean Naija Telegram Bot for waste management with Twilio verification",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "telegraf": "^4.16.3",
-    "twilio": "^4.22.0",
+    "express": "^4.19.2",
+    "axios": "^1.6.8",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.8"
+    "cors": "^2.8.5",
+    "telegraf": "^4.16.3",
+    "twilio": "^5.3.5"
   },
   "engines": {
     "node": ">=18.0.0"
