--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "clean-naija-bot",
+  "name": "clean-naija-bot-features",
   "version": "1.0.0",
-  "description": "Clean Naija Telegram Bot for waste management with Twilio verification",
-  "main": "server.js",
-  "type": "module",
+  "main": "bot.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node bot.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "axios": "^1.6.8",
+    "telegraf": "^4.12.2",
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "telegraf": "^4.16.3",
-    "twilio": "^5.3.5"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "csv-stringify": "^6.2.0"
   }
 }
