--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clean-naija-bot-features",
+  "name": "clean-naija-bot",
   "version": "1.0.0",
   "main": "bot.js",
   "scripts": {
@@ -9,8 +9,7 @@
     "telegraf": "^4.12.2",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "csv-stringify": "^6.2.0"
+    "express": "^4.19.2",
+    "twilio": "^4.21.0"
   }
 }
