--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "type": "module",
-  "scripts": {
-    "start": "node server.js"
-  }
-}
-{
-  "name": "clean-naija-bot",
+  "name": "clean-naija-bot-features",
   "version": "1.0.0",
+  "description": "Telegram bot with Twilio phone verification, location detection, and admin features.",
   "main": "bot.js",
+  "type": "module",
   "scripts": {
     "start": "node bot.js"
   },
@@ -15,7 +11,8 @@
     "telegraf": "^4.12.2",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "express": "^4.19.2",
-    "twilio": "^4.21.0"
+    "express": "^4.18.2",
+    "twilio": "^4.21.0",
+    "node-fetch": "^3.3.2"
   }
 }
