--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "clean-naija-bot-features",
   "version": "1.0.0",
-  "description": "Telegram bot with Twilio phone verification, location detection, and admin features.",
+  "description": "Telegram bot with Twilio verification, location detection, user database, and admin tools.",
   "main": "bot.js",
   "type": "module",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "telegraf": "^4.12.2",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "twilio": "^4.21.0",
-    "node-fetch": "^3.3.2"
+    "fs-extra": "^11.2.0",
+    "node-fetch": "^3.3.2",
+    "telegraf": "^4.12.2",
+    "twilio": "^4.21.0"
   }
 }
