--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "clean-naija-bot-features",
+  "name": "clean-naija-bot",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "telegraf": "^4.12.2",
+    "express": "^4.18.2",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "twilio": "^4.5.0",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.1"
+    "twilio": "^4.23.0"
   }
 }
