--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "type": "module",
-  "scripts": { "start": "node server.js" },
+  "name": "clean-naija-bot",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "telegraf": "^4.12.2",
-    "dotenv": "^16.3.1",
     "express": "^4.19.2",
-    "twilio": "^4.21.0"
+    "dotenv": "^16.3.1",
+    "axios": "^1.4.0"
   }
 }
