--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "clean-naija-bot",
   "version": "1.0.0",
-  "main": "bot.js",
+  "description": "Telegram AI Waste Recycling Bot with Twilio OTP verification",
+  "main": "server.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "telegraf": "^4.12.2",
-    "axios": "^1.6.2",
-    "dotenv": "^16.4.5",
-    "twilio": "^4.20.0"
+    "express": "^4.19.2",
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "node-fetch": "^3.3.2"
   }
 }
