--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "werleed-bot",
+  "name": "clean-naija-bot-features",
   "version": "1.0.0",
-  "description": "Telegram bot with Twilio OTP verification and admin features",
+  "description": "Telegram bot with Twilio verification, admin features, and smart user interactions",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.6.8",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.61.0",
-    "phonenumbers": "^1.1.1",
-    "twilio": "^4.18.0",
-    "moment": "^2.29.4"
+    "telegraf": "^4.15.3",
+    "twilio": "^4.22.0",
+    "google-libphonenumber": "^3.2.37"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": ">=18.0.0"
   }
 }
