--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "clean-naija-bot-features",
+  "name": "clean-naija-bot",
   "version": "1.0.0",
-  "description": "Telegram bot with Twilio verification, admin features, and smart user interactions",
+  "description": "Clean Naija Telegram Bot with Twilio OTP verification and smart waste detection.",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "node-telegram-bot-api": "^0.66.0",
+    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "telegraf": "^4.15.3",
-    "twilio": "^4.22.0",
-    "google-libphonenumber": "^3.2.37"
+    "fs-extra": "^11.1.1",
+    "phonenumber": "^1.0.8",
+    "twilio": "^4.19.0"
   },
   "engines": {
     "node": ">=18.0.0"
