--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
-BOT_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
-TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxx
-TWILIO_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxxx
-TWILIO_VERIFY_SID=VAxxxxxxxxxxxxxxxxxxxx
-ADMIN_ID=7003416998
-PORT=8080
+# === TELEGRAM BOT CONFIG ===
+TELEGRAM_TOKEN=your_telegram_bot_token_here
+ADMIN_TELEGRAM_ID=123456789
+
+# === TWILIO CONFIG ===
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_VERIFY_SID=your_twilio_verify_sid
+
+# === SERVER PORT ===
+PORT=3000
