--- a/.env
+++ b/.env
@@ -1,11 +1,5 @@
-# === TELEGRAM BOT CONFIG ===
-TELEGRAM_TOKEN=your_telegram_bot_token_here
-ADMIN_TELEGRAM_ID=123456789
-
-# === TWILIO CONFIG ===
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_VERIFY_SID=your_twilio_verify_sid
-
-# === SERVER PORT ===
-PORT=3000
+TELEGRAM_TOKEN=         # Telegram Bot Token (required)
+ADMIN_TELEGRAM_ID=      # one ID or comma-separated admin IDs
+TWILIO_ACCOUNT_SID=     # Twilio Account SID
+TWILIO_AUTH_TOKEN=      # Twilio Auth Token
+TWILIO_VERIFY_SID=      # Twilio Verify Service SID
