--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "clean-naija-bot",
   "version": "1.0.0",
-  "description": "Clean Naija Telegram Bot with Twilio OTP verification and admin features.",
+  "description": "Clean Naija Telegram Bot with Twilio OTP verification and offline waste scanning.",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "awesome-phonenumber": "^2.57.2",
     "dotenv": "^16.3.1",
     "fs-extra": "^11.1.1",
-    "node-telegram-bot-api": "^0.66.0",
+    "node-telegram-bot-api": "^0.61.0",
     "twilio": "^4.19.0"
   },
   "engines": {
