--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "clean-naija-bot",
   "version": "1.0.0",
-  "description": "Clean Naija Telegram Bot with Twilio OTP verification and offline waste scanning.",
+  "description": "Clean Naija Telegram Bot with Twilio OTP and offline waste detection",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "awesome-phonenumber": "^2.57.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "fs-extra": "^11.1.1",
-    "node-telegram-bot-api": "^0.61.0",
-    "twilio": "^4.19.0"
+    "libphonenumber-js": "^1.10.22",
+    "node-telegram-bot-api": "^0.66.0",
+    "twilio": "^4.19.0",
+    "mime-types": "^2.1.35"
   },
   "engines": {
     "node": ">=18.0.0"
