--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clean-naija-bot",
   "version": "1.0.0",
-  "description": "Clean Naija Telegram Bot with Twilio OTP verification and offline waste detection",
+  "description": "Clean Naija Telegram Bot with Twilio OTP verification and upload/scan simulation",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
@@ -10,7 +10,7 @@
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "libphonenumber-js": "^1.10.50",
+    "fs-extra": "^11.1.1",
     "node-telegram-bot-api": "^0.66.0",
     "twilio": "^4.19.0"
   },
