--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
 # Telegram
-TELEGRAM_TOKEN=your_telegram_bot_token_here
-BOT_TOKEN=optional_duplicate_of_TELEGRAM_TOKEN
+TELEGRAM_TOKEN=xxxx:yyyyy
 
 # Twilio
-TWILIO_ACCOUNT_SID=your_twilio_account_sid
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_VERIFY_SID=your_twilio_verify_service_sid
+TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxxx
+TWILIO_VERIFY_SID=VAXXXXXXXXXXXXXXXXXXXX
 
-# Admin (optional)
+# Admin (single ID)
 ADMIN_TELEGRAM_ID=123456789
