--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "clean-naija-bot",
+  "name": "telegram-twilio-bot",
   "version": "1.0.0",
-  "description": "Clean Naija Telegram Bot with Twilio OTP verification and upload/scan simulation",
+  "description": "Telegram bot with Twilio OTP verification, admin panel, and auto keep-alive server.",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
-    "node-telegram-bot-api": "^0.66.0",
-    "twilio": "^4.19.0"
+    "fs-extra": "^11.2.0",
+    "node-fetch": "^2.6.12",
+    "node-telegram-bot-api": "^0.63.0",
+    "path": "^0.12.7",
+    "twilio": "^4.21.0"
   },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": ">=18.x"
+  },
+  "author": "Werleed",
+  "license": "MIT"
 }
