--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
   "name": "telegram-twilio-bot",
   "version": "1.0.0",
-  "description": "Telegram bot with Twilio OTP verification, admin panel, and auto keep-alive server.",
+  "description": "Telegram bot with Twilio verification and multi-language support",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "axios": "^1.6.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "fs-extra": "^11.2.0",
+    "fs-extra": "^11.1.1",
     "node-fetch": "^2.6.12",
-    "node-telegram-bot-api": "^0.63.0",
-    "path": "^0.12.7",
-    "twilio": "^4.21.0"
-  },
-  "engines": {
-    "node": ">=18.x"
-  },
-  "author": "Werleed",
-  "license": "MIT"
+    "node-telegram-bot-api": "^0.61.0",
+    "twilio": "^4.22.0"
+  }
 }
