--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "telegram-twilio-bot",
+  "name": "clean9ja-bot",
   "version": "1.0.0",
-  "description": "Telegram bot with Twilio verification and multi-language support",
+  "description": "Telegram + Twilio bot for waste collection (Clean9ja)",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
+  "engines": {
+    "node": "^18.0.0"
+  },
   "dependencies": {
-    "axios": "^1.6.0",
-    "dotenv": "^16.0.3",
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs-extra": "^11.1.1",
-    "node-fetch": "^2.6.12",
     "node-telegram-bot-api": "^0.61.0",
-    "twilio": "^4.22.0"
+    "twilio": "^8.9.0"
   }
 }
