--- a/.env
+++ b/.env
@@ -1,10 +1,7 @@
-# Telegram
-TELEGRAM_TOKEN=xxxx:yyyyy
-
-# Twilio
-TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxx
-TWILIO_AUTH_TOKEN=xxxxxxxxxxxxxxxxxxxx
-TWILIO_VERIFY_SID=VAXXXXXXXXXXXXXXXXXXXX
-
-# Admin (single ID)
+# Copy to .env and fill values in Railway environment variables instead
+TELEGRAM_TOKEN=123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
 ADMIN_TELEGRAM_ID=123456789
+TWILIO_ACCOUNT_SID=ACxxxxx
+TWILIO_AUTH_TOKEN=xxxxxx
+TWILIO_VERIFY_SID=VAXXXXX
+PORT=8080
