--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "clean9ja-bot",
   "version": "1.0.0",
-  "description": "Telegram + Twilio bot for waste collection (Clean9ja)",
+  "description": "Werleed Clean9ja Telegram Bot with Twilio verification and admin system",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
-  "engines": {
-    "node": "^18.0.0"
-  },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.7.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
-    "node-telegram-bot-api": "^0.61.0",
-  "twilio": "^4.22.0"
+    "express": "^4.19.2",
+    "fs-extra": "^11.2.0",
+    "node-telegram-bot-api": "^0.64.0",
+    "twilio": "^5.2.0"
   }
 }
