--- a/.env
+++ b/.env
@@ -1,7 +1,18 @@
-# Copy to .env and fill values in Railway environment variables instead
-TELEGRAM_TOKEN=123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
-ADMIN_TELEGRAM_ID=123456789
-TWILIO_ACCOUNT_SID=ACxxxxx
-TWILIO_AUTH_TOKEN=xxxxxx
-TWILIO_VERIFY_SID=VAXXXXX
+# Telegram
+TELEGRAM_TOKEN=your_telegram_bot_token_here
+BOT_TOKEN=   # optional duplicate, not required if TELEGRAM_TOKEN is set
+ADMIN_TELEGRAM_ID=123456789  # your Telegram user id (admin)
+
+# Twilio Verify (optional; required if you want OTP)
+TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_VERIFY_SID=VAXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+# Bot deployment and behavior
+BOT_MODE=polling      # "polling" or "webhook"
+TELEGRAM_WEBHOOK_URL=   # required only if BOT_MODE=webhook (e.g. https://your-service.up.railway.app)
 PORT=8080
+
+# Keep-alive (optional)
+KEEP_ALIVE=true
+KEEP_ALIVE_INTERVAL_MS=240000
