--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "clean9ja-bot",
   "version": "1.0.0",
-  "description": "Telegram bot for Clean9ja - telegram + twilio verify example",
   "main": "bot.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node bot.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "axios": "^1.4.0",
+    "express": "^4.18.2",
     "dotenv": "^16.3.1",
-    "fs-extra": "^11.1.1",
-    "node-telegram-bot-api": "^0.61.0"
+    "twilio": "^4.20.0",
+    "axios": "^1.6.8",
+    "node-telegram-bot-api": "^0.64.0"
   }
 }
