--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "clean9ja-telegram-twilio-bot",
+  "name": "clean9ja-bot",
   "version": "1.0.0",
-  "description": "A Telegram bot with Twilio phone verification and admin/user features for Clean9ja (Werleed Bot).",
+  "description": "Werleed Clean9ja Telegram-Twilio Bot — a multi-language verification and chat bot with admin and user features.",
   "main": "bot.js",
   "type": "commonjs",
   "scripts": {
     "start": "node bot.js",
     "dev": "nodemon bot.js"
   },
+  "author": "Werleed",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.7.2",
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.6.2",
+    "axios": "^1.6.8",
+    "dotenv": "^16.3.1",
+    "twilio": "^4.21.0",
     "node-telegram-bot-api": "^0.61.0",
-    "twilio": "^4.19.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
+    "fs-extra": "^11.2.0",
+    "moment": "^2.30.1",
+    "geoip-lite": "^1.4.7",
+    "node-fetch": "^2.6.9"
   },
   "engines": {
     "node": ">=18"
   },
   "keywords": [
     "telegram-bot",
-    "twilio-verification",
+    "twilio",
+    "sms-verification",
+    "multi-language",
     "clean9ja",
-    "werleed",
-    "otp",
-    "express"
-  ],
-  "author": "Clean9ja Team",
-  "license": "MIT"
+    "werleed"
+  ]
 }
