--- a/package.json
+++ b/package.json
@@ -1,35 +1,24 @@
 {
   "name": "clean9ja-bot",
-  "version": "1.0.0",
-  "description": "Werleed Clean9ja Telegram-Twilio Bot — a multi-language verification and chat bot with admin and user features.",
+  "version": "2.1.0",
+  "description": "Clean9ja telegram bot - multi-language, offline-first, optional Twilio verification, image/audio offline mock analysis",
   "main": "bot.js",
-  "type": "commonjs",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon bot.js"
-  },
-  "author": "Werleed",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.19.2",
-    "axios": "^1.6.8",
-    "dotenv": "^16.3.1",
-    "twilio": "^4.21.0",
-    "node-telegram-bot-api": "^0.61.0",
-    "fs-extra": "^11.2.0",
-    "moment": "^2.30.1",
-    "geoip-lite": "^1.4.7",
-    "node-fetch": "^2.6.9"
+    "start": "node bot.js"
   },
   "engines": {
     "node": ">=18"
   },
-  "keywords": [
-    "telegram-bot",
-    "twilio",
-    "sms-verification",
-    "multi-language",
-    "clean9ja",
-    "werleed"
-  ]
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
+    "jimp": "^0.22.11",
+    "multer": "^1.4.5-lts.1",
+    "node-telegram-bot-api": "^0.64.0",
+    "node-fetch": "^2.6.7"
+  },
+  "optionalDependencies": {
+    "twilio": "^4.5.0"
+  }
 }
