--- a/.env
+++ b/.env
@@ -1,18 +1,10 @@
 # Telegram
-TELEGRAM_TOKEN=your_telegram_bot_token_here
-BOT_TOKEN=   # optional duplicate, not required if TELEGRAM_TOKEN is set
-ADMIN_TELEGRAM_ID=123456789  # your Telegram user id (admin)
+TELEGRAM_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
 
-# Twilio Verify (optional; required if you want OTP)
-TWILIO_ACCOUNT_SID=ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_VERIFY_SID=VAXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+# Optional Twilio (leave empty to use offline in-chat OTP)
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_VERIFY_SID=
 
-# Bot deployment and behavior
-BOT_MODE=polling      # "polling" or "webhook"
-TELEGRAM_WEBHOOK_URL=   # required only if BOT_MODE=webhook (e.g. https://your-service.up.railway.app)
+# Server
 PORT=8080
-
-# Keep-alive (optional)
-KEEP_ALIVE=true
-KEEP_ALIVE_INTERVAL_MS=240000
