--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "clean9ja-bot",
-  "version": "2.1.0",
-  "description": "Clean9ja telegram bot - multi-language, offline-first, optional Twilio verification, image/audio offline mock analysis",
+  "version": "1.0.0",
+  "description": "Telegram bot + admin UI (mock Twilio) for Clean9ja",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "lint": "echo \"no lint configured\""
   },
   "engines": {
     "node": ">=18"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "fs-extra": "^11.2.0",
-    "jimp": "^0.22.11",
-    "multer": "^1.4.5-lts.1",
-    "node-telegram-bot-api": "^0.64.0",
-    "node-fetch": "^2.6.7"
-  },
-  "optionalDependencies": {
-    "twilio": "^4.5.0"
+    "fs-extra": "^11.1.1",
+    "node-telegram-bot-api": "^0.61.0"
   }
 }
