--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
-# Telegram
-TELEGRAM_TOKEN=YOUR_TELEGRAM_BOT_TOKEN
+# Telegram token (required to connect to Telegram)
+TELEGRAM_TOKEN=YOUR_TELEGRAM_BOT_TOKEN_HERE
 
-# Optional Twilio (leave empty to use offline in-chat OTP)
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
-TWILIO_VERIFY_SID=
+# Twilio - not required if using mock; only used if settings.twilio_enabled = true
+TWILIO_ACCOUNT_SID=YOUR_TWILIO_ACCOUNT_SID
+TWILIO_AUTH_TOKEN=YOUR_TWILIO_AUTH_TOKEN
+TWILIO_VERIFY_SID=YOUR_TWILIO_VERIFY_SID
 
-# Server
+# Admin secret for admin API (change to something secure)
+ADMIN_SECRET=change_this_admin_secret
+
+# Runtime port (Railway will override)
 PORT=8080
