--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "clean9ja-bot",
   "version": "1.0.0",
-  "description": "Telegram bot + admin UI (mock Twilio) for Clean9ja",
+  "description": "Clean9ja Telegram bot - waste scanning, verification, finance, complaints, admin tools",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
-    "lint": "echo \"no lint configured\""
+    "dev": "nodemon bot.js"
+  },
+  "keywords": ["telegram", "bot", "twilio", "verification", "clean9ja"],
+  "author": "Clean9ja",
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "node-telegram-bot-api": "^0.61.0",
+    "twilio": "^4.6.0"
   },
   "engines": {
-    "node": ">=18"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
-    "node-telegram-bot-api": "^0.61.0"
+    "node": ">=16"
   }
 }
