--- a/.env
+++ b/.env
@@ -1,13 +1,7 @@
-# Telegram token (required to connect to Telegram)
-TELEGRAM_TOKEN=YOUR_TELEGRAM_BOT_TOKEN_HERE
-
-# Twilio - not required if using mock; only used if settings.twilio_enabled = true
-TWILIO_ACCOUNT_SID=YOUR_TWILIO_ACCOUNT_SID
-TWILIO_AUTH_TOKEN=YOUR_TWILIO_AUTH_TOKEN
-TWILIO_VERIFY_SID=YOUR_TWILIO_VERIFY_SID
-
-# Admin secret for admin API (change to something secure)
-ADMIN_SECRET=change_this_admin_secret
-
-# Runtime port (Railway will override)
+TELEGRAM_TOKEN= (required)
 PORT=8080
+INIT_ADMIN_ID= (one admin telegram numeric id to initialize)
+TWILIO_ACCOUNT_SID= (optional)
+TWILIO_AUTH_TOKEN= (optional)
+TWILIO_VERIFY_SID= (optional)
+COMPLAINT_BONUS=700
