--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "clean9ja-bot",
-  "version": "1.0.0",
-  "description": "Clean9ja Telegram bot - waste scanning, verification, finance, complaints, admin tools",
+  "version": "2.1.0",
+  "description": "Clean9ja Telegram Bot - waste scanning, verification, finance, complaints, admin tools",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon bot.js"
-  },
-  "keywords": ["telegram", "bot", "twilio", "verification", "clean9ja"],
-  "author": "Clean9ja",
-  "license": "MIT",
-  "dependencies": {
-    "dotenv": "^16.1.4",
-    "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.61.0",
-    "twilio": "^4.6.0"
+    "start": "node bot.js"
   },
   "engines": {
     "node": ">=16"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "node-telegram-bot-api": "^0.61.0",
+    "twilio": "^4.0.0"
   }
 }
