--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "clean9ja-bot",
-  "version": "2.1.0",
-  "description": "Clean9ja Telegram Bot - waste scanning, verification, finance, complaints, admin tools",
+  "version": "2.1.1",
+  "description": "Clean9ja Telegram Bot - User & Admin Automation with Twilio Verification, Withdrawals, and Complaints System",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "dev": "nodemon bot.js"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=20.x"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
-    "node-telegram-bot-api": "^0.61.0",
-    "twilio": "^4.0.0"
+    "axios": "^1.7.4",
+    "dotenv": "^16.4.1",
+    "express": "^4.19.2",
+    "mongoose": "^8.6.0",
+    "node-telegram-bot-api": "^0.66.0",
+    "twilio": "^4.22.0",
+    "uuid": "^9.0.1"
   }
 }
